FIX DA024195 - z-index select ajout de modele pdf à concatener

--- a/css/view_documents.css
+++ b/css/view_documents.css
@@ -202,3 +202,9 @@
 .h3-element-count::after {
 	content: attr(data-element-count);
 }
+
+
+/* css patch for dolibarr */
+.mod-referenceletters.page-card .select2-dropdown.ui-dialog {
+  z-index: 9999 !important;
+}
